2002-01-15  Maciej Stachowiak  <mjs@apple.com>

	* src/kdelibs/kjs/Makefile.am: Add missing files to BUILT_SOURCES
	and build rules to fix `make -j3'

2002-01-14  Maciej Stachowiak  <mjs@apple.com>

	* .cvsignore:
	* Makefile.am:
	* Makefile.in:
	* include/.cvsignore:
	* include/Makefile.am:
	* include/private/.cvsignore:
	* include/private/Makefile.am:
	* lib/.cvsignore:
	* lib/Makefile.in:
	* src/.cvsignore:
	* src/Makefile.am:
	* src/kdelibs/.cvsignore:
	* src/kdelibs/Makefile.am:
	* src/kdelibs/kdecore/.cvsignore:
	* src/kdelibs/kdecore/Makefile.am:
	* src/kdelibs/kdecore/Makefile.in:
	* src/kdelibs/khtml/.cvsignore:
	* src/kdelibs/khtml/Makefile.am:
	* src/kdelibs/khtml/Makefile.in:
	* src/kdelibs/khtml/css/.cvsignore:
	* src/kdelibs/khtml/css/Makefile.am:
	* src/kdelibs/khtml/css/Makefile.in:
	* src/kdelibs/khtml/dom/.cvsignore:
	* src/kdelibs/khtml/dom/Makefile.am:
	* src/kdelibs/khtml/dom/Makefile.in:
	* src/kdelibs/khtml/ecma/.cvsignore:
	* src/kdelibs/khtml/ecma/Makefile.am:
	* src/kdelibs/khtml/ecma/Makefile.in:
	* src/kdelibs/khtml/html/.cvsignore:
	* src/kdelibs/khtml/html/Makefile.am:
	* src/kdelibs/khtml/html/Makefile.in:
	* src/kdelibs/khtml/java/.cvsignore:
	* src/kdelibs/khtml/java/ChangeLog:
	* src/kdelibs/khtml/java/Makefile.am:
	* src/kdelibs/khtml/java/Makefile.in:
	* src/kdelibs/khtml/java/tests/Makefile.am:
	* src/kdelibs/khtml/misc/.cvsignore:
	* src/kdelibs/khtml/misc/Makefile.am:
	* src/kdelibs/khtml/misc/Makefile.in:
	* src/kdelibs/khtml/pics/Makefile.am:
	* src/kdelibs/khtml/rendering/.cvsignore:
	* src/kdelibs/khtml/rendering/Makefile.am:
	* src/kdelibs/khtml/rendering/Makefile.in:
	* src/kdelibs/khtml/xml/.cvsignore:
	* src/kdelibs/khtml/xml/Makefile.am:
	* src/kdelibs/khtml/xml/Makefile.in:
	* src/kdelibs/kjs/.cvsignore:
	* src/kdelibs/kjs/ChangeLog:
	* src/kdelibs/kjs/Makefile.am:
	* src/kdelibs/kjs/Makefile.in:
	* src/kdelibs/kjs/kjs-test:
	* src/kdelibs/kjs/kjs-test.chk:
	* src/kwq/.cvsignore:
	* src/kwq/Makefile.am: