@@ -23,14 +23,8 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef QSIZE_H_
-#define QSIZE_H_
-
-#ifdef USING_BORROWED_QSIZE
-
-#include <_qsize.h>
-
-#else
+#ifndef _QSIZE_H_
+#define _QSIZE_H_
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
@@ -54,7 +48,7 @@ public:
 
     QSize();
     QSize(int,int);
-    // QSize(const QSize &);
+    QSize(const QSize &);
 
 // add no-op destructor
 #ifdef _KWQ_PEDANTIC_
@@ -70,6 +64,13 @@ public:
     void setHeight(int);
     QSize expandedTo(const QSize &) const;
 
+#ifdef USING_BORROWED_QSIZE
+    bool isNull() const;
+    bool isEmpty() const;
+    void transpose();
+    QSize boundedTo(const QSize &) const;
+#endif
+
     // operators ---------------------------------------------------------------
 
     /* Note: Trolltech seems to want operator= to be a bitwise copy
@@ -80,6 +81,22 @@ public:
     friend bool operator==(const QSize &, const QSize &);
     friend bool operator!=(const QSize &, const QSize &);
 
+#ifdef USING_BORROWED_QSIZE
+    QSize &operator+=(const QSize &);
+    QSize &operator-=(const QSize &);
+    QSize &operator*=(int);
+    QSize &operator*=(double);
+    QSize &operator/=(int);
+    QSize &operator/=(double);
+
+    friend QSize operator-(const QSize &, const QSize &);
+    friend QSize operator*(const QSize &, int);
+    friend QSize operator*(int, const QSize &);
+    friend QSize operator*(const QSize &, double);
+    friend QSize operator*(double, const QSize &);
+    friend QSize operator/(const QSize &, int);
+    friend QSize operator/(const QSize &, double);
+#endif
 
 #ifdef _KWQ_IOSTREAM_
     friend ostream &operator<<(ostream &, const QSize &);
@@ -93,7 +110,5 @@ public:
     QCOORD h;
 
 }; // class QSize ==============================================================
-
-#endif
 
 #endif
